[gd_scene load_steps=9 format=2]

[ext_resource path="res://EnemyWeapons/EnemyWeapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/art/player/body.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/LilitaOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.168627, 0.768627, 0.160784, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0941176, 0.141176, 0.101961, 0.509804 )

[node name="Enemy" type="KinematicBody2D"]
modulate = Color( 1, 0.615686, 0.615686, 1 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemyWeapon" parent="." instance=ExtResource( 1 )]

[node name="Body" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 2 )

[node name="Visualizer" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 0.5 )
z_index = 2
texture = ExtResource( 2 )

[node name="HealthBarPosition" type="Node2D" parent="."]

[node name="PlayerName" type="Label" parent="HealthBarPosition"]
margin_left = -64.0
margin_top = -88.0
margin_right = 64.0
margin_bottom = -69.0
rect_min_size = Vector2( 128, 0 )
custom_fonts/font = SubResource( 2 )
text = "Player 1 Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="HealthBarPosition"]
margin_left = -48.0
margin_top = -64.0
margin_right = 48.0
margin_bottom = -48.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
